--- a/pom.xml
+++ b/pom.xml
@@ -5,5 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.crazymakercircle</groupId>
   <artifactId>netty_redis_zookeeper_source_code</artifactId>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+  <modules>
+    <module>NIODemo</module>
+    <module>chatcommon</module>
+  </modules>
 </project>
